@@ -169,7 +169,7 @@ public class InputJobInfo implements Serializable{
   /**
    * Set/Get Property information to be passed down to *StorageDriver implementation
    * put implementation specific storage driver configurations here
-   * @return
+   * @return the implementation specific job properties 
    */
   public Properties getProperties() {
     return properties;
